<resources>
    <string name="app_name">JKU App</string>
    <string name="title_kusss">KUSSS</string>
    <string name="title_calendar">Stundenplan</string>
    <string name="title_exams">Prüfungen</string>
    <string name="title_grades">Noten</string>
    <string name="title_lvas">LVAs</string>
    <string name="title_stats">Statistik</string>
    <string name="title_studies">Studienrichtung</string>
    <string name="title_campus">Campus</string>
    <string name="title_mensa">Mensa</string>
    <string name="title_map">Karte</string>
    <string name="title_oeh" translatable="false">ÖH</string>
    <string name="title_oeh_info">Info</string>
    <string name="title_oeh_rights">Rechte</string>
    <string name="title_oeh_news">News</string>
    <string name="title_oeh_linz" translatable="false">ÖH Linz</string>
    <string name="navigation_drawer_open">Navigation anzeigen</string>
    <string name="navigation_drawer_close">Navigation ausblenden</string>
    <string name="action_about">About</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_changelog">Change Log</string>
    <string name="action_settings_summary">Einstellungen von KUSSS, Benachrichtigungen, ...</string>
    <string name="action_snap_to_location">Karte zur aktuellen GPS-Position bewegen</string>
    <string name="grade_1">Sehr gut</string>
    <string name="grade_2">Gut</string>
    <string name="grade_3">Befriedigend</string>
    <string name="grade_4">Genügend</string>
    <string name="grade_5">Nicht genügend</string>
    <string name="grade_get">Mit Erfolg teilgenommen</string>
    <string name="grade_gb">Bestanden</string>
    <string name="grade_gab">Mit Auszeichnung bestanden</string>
    <string name="grade_unknown">Nicht bewertet</string>
    <string name="grade_type_interim_ca">Vorläufige Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_final_ca">Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_recognized_cc">Sonstige Beurteilungen</string>
    <string name="grade_type_recognized_a">Anerkannte Beurteilungen</string>
    <string name="grade_type_recognized_exam">Anerkannte Prüfungen</string>
    <string name="grade_type_final_exam">Prüfungen</string>
    <string name="grade_type_unknown">TODO</string>
    <string name="grade_type_all">alle Beurteilungen</string>
    <string name="grade_type_none_available">keine Noten verfügbar</string>
    <string name="notification_sync_running">Daten werden synchronisiert</string>
    <string name="notification_sync_connect">Verbindung wird aufgebaut</string>
    <string name="notification_sync_calendar">Termine werden synchronisiert</string>
    <string name="notification_sync_calendar_loading">Termine werden geladen: %s</string>
    <string name="notification_sync_calendar_updating">Termine werden aktualisiert: %s</string>
    <string name="notification_sync_calendar_adding">Termine werden hinzugefügt: %s</string>
    <string name="notification_sync_calendar_saving">Termine werden gespeichert: %s</string>
    <string name="notification_sync_exam">Prüfungen werden synchronisiert</string>
    <string name="notification_sync_exam_loading">Prüfungen werden geladen</string>
    <string name="notification_sync_exam_updating">Prüfungen werden aktualisiert</string>
    <string name="notification_sync_exam_saving">Prüfungen werden gespeichert</string>
    <string name="notification_sync_assessment">Noten werden synchronisiert</string>
    <string name="notification_sync_assessment_loading">Noten werden geladen</string>
    <string name="notification_sync_assessment_updating">Noten werden aktualisiert</string>
    <string name="notification_sync_assessment_saving">Noten werden gespeichert</string>
    <string name="notification_sync_lva">LVAs werden synchronisiert</string>
    <string name="notification_sync_lva_loading">LVAs werden geladen</string>
    <string name="notification_sync_lva_updating">LVAs werden aktualisiert</string>
    <string name="notification_sync_lva_saving">LVAs werden gespeichert</string>
    <string name="notification_sync_curricula">Studienrichtungen werden synchronisiert</string>
    <string name="notification_sync_curricula_loading">Studienrichtungen werden geladen</string>
    <string name="notification_sync_curricula_updating">Studienrichtungen werden aktualisiert</string>
    <string name="notification_sync_curricula_saving">Studienrichtungen werden gespeichert</string>
    <string name="notification_events_changed_title" formatted="false">Termin(e) in "%s" geändert</string>
    <string name="notification_events_changed" formatted="false">%d Termin(e) in "%s" geändert</string>
    <string name="notification_new_exams_title">neue Prüfung(en) gefunden</string>
    <string name="notification_new_exams" formatted="false">%d neue Prüfung(en) gefunden</string>
    <string name="notification_grades_changed_title">neue Note(n) verfügbar</string>
    <string name="notification_grades_changed" formatted="false">%d neue Note(n) verfügbar</string>
    <string name="notification_poi_changed_title">neue Orte verfügbar</string>
    <string name="notification_poi_changed" formatted="false">%d neue Orte verfügbar</string>
    <string name="notification_error">"JKU App" Fehler</string>
    <string name="notification_error_account_is_null">kein Account vorhanden</string>
    <string name="notification_error_account_not_available">Account konnte nicht validiert werden</string>
    <string name="pref_cat_sync_settings">Einstellungen bearbeiten</string>
    <string name="pref_cat_update_password">Passwort aktualisieren</string>
    <string name="pref_cat_kusss_main">KUSSS</string>
    <string name="pref_kusss_user_title">Matrikelnummer</string>
    <string name="pref_kusss_pw_title">Passwort</string>
    <string name="pref_kusss_sync_title">Synchronisieren</string>
    <string name="pref_kusss_sync_interval_summary">Intervall in dem die Daten synchronisiert werden</string>
    <string name="pref_kusss_sync_interval_title">Synchronisationsintervall</string>
    <string name="pref_kusss_notify_title">Benachrichtigen</string>
    <string name="pref_cat_kusss_calendar">Stundenplan</string>
    <string name="pref_kusss_calendar_sync_summary">Termine vom aktuellen Semester aus KUSSS synchronisieren</string>
    <string name="pref_kusss_calendar_sync_title">Synchronisieren</string>
    <string name="pref_kusss_calendar_notify_summary">Benachrichtigen wenn sich Termine geändert haben</string>
    <string name="pref_kusss_calendar_extend_title">Kalender erweitern</string>
    <string name="pref_kusss_calendar_extend_summary">alle Termine werden in einen bestehenden Kalender importiert</string>
    <string name="pref_kusss_calendar_extended_title">Kalender</string>
    <string name="pref_kusss_calendar_extended_summary">der Kalender in den die Termine importiert werden</string>
    <string name="pref_cat_kusss_grade">Noten</string>
    <string name="pref_kusss_grade_sync_summary">Noten synchronisieren</string>
    <string name="pref_kusss_grade_notify_summary">Benachrichtigen wenn neue Noten vorhanden sind</string>
    <string name="pref_cat_kusss_exam">Prüfungen</string>
    <string name="pref_kusss_exam_sync_summary">LVA-Prüfungen synchronisieren</string>
    <string name="pref_kusss_exam_notify_summary">Benachrichtigen wenn neue LVA-Prüfungen zu den eigenen LVAs verfügbar sind</string>
    <string name="pref_kusss_exam_get_from_lva_title">Prüfungen nach LVA-Nr laden</string>
    <string name="pref_kusss_exam_get_from_lva_summary">findet Prüfungen zu LVAs auch aus früheren Semestern, ist dafür aber langsamer ...</string>
    <string name="pref_cat_app_main">App</string>
    <string name="pref_app_use_light_theme_title">helles Design verwenden</string>
    <string name="pref_app_use_light_theme_summary">Das Ändern dieser Einstellung startet die App beim Verlassen der Einstellungen neu</string>
    <string name="pref_cat_app_map">Karte</string>
    <string name="pref_app_map_file_title">eigene Kartendatei</string>
    <string name="pref_cat_stats">Statistik</string>
    <string name="pref_stats_use_lva_bar_chart_summary">Barchart für offene und erledigte LVAs verwenden</string>
    <string name="pref_stats_use_lva_bar_chart_title">Diagramme</string>
    <string name="pref_stats_positive_grades_only_summary">Notendurchschnitt nur mit positiven Noten berechnen</string>
    <string name="pref_stats_positive_grades_only_title">besserer Notendurchschnitt für LVAs</string>
    <string name="pref_cat_mensa">Mensa</string>
    <string name="pref_mensa_group_menu_by_day_title">nach Tag gruppieren</string>
    <string name="pref_mensa_group_menu_by_day_summary">Alle Menüs nach Tag gruppieren</string>
    <string name="pref_cat_tracking">Tracking</string>
    <string name="pref_tracking_errors_title">Fehler</string>
    <string name="pref_tracking_errors_summary">Fehler automatisch an Entwickler senden damit schneller darauf reagiert werden kann.</string>
    <string name="group_user">User</string>
    <string name="group_oeh">ÖH</string>
    <string name="group_kusss">KUSSS</string>
    <string name="group_other">Sonstiges</string>
    <string name="settings_kusss_title">KUSSS</string>
    <string name="settings_kusss_summary">Einstellungen für KUSSS</string>
    <string name="settings_app_title">App</string>
    <string name="settings_app_summary">Einstellungen für App</string>
    <string name="settings_timetable_title">Kalender</string>
    <string name="settings_timetable_summary">Einstellungen für verwendete Kalender und Stundenplan</string>
    <string name="about_app_summary">Das ist eine neue JKU, KUSSS, ÖH, ... App für Studenten der JKU Linz.\n\nDie App ist noch in Entwicklung und die am meisten benötigten Funktionen sind bereits implementiert.\n\nWenn Sie Fragen, Probleme oder Wünsche haben, schreiben Sie eine E-Mail an die Entwickler!\nBesitzer eines GitHub-Accounts können auch einfach hier posten: https://github.com/marunjar/anewjkuapp/issues </string>
    <string name="about_libraries_title">verwendete Bibliotheken</string>
    <string name="about_credits_title">Credits</string>
    <string name="oeh_info_main_title" translatable="false">Deine ÖH</string>
    <string name="oeh_info_main_summary" translatable="false">Die Österreichische Hochschülerinnen- und Hochschülerschaft ist die gesetzliche Vertretung aller Studierenden. Sie gliedert sich bundesweit in die ÖH-Bundesvertretung (<a href="http://www.oeh.ac.at/">http://www.oeh.ac.at/</a>), in die Universitätsvertretungen an den einzelnen Universitäten, wie beispielsweise die HochschülerInnenschaft an der Johannes Kepler Universität Linz (<a href="http://oeh.jku.at/">http://oeh.jku.at</a>).(</string>
    <string name="oeh_info_jku_title" translatable="false">Deine ÖH an der JKU</string>
    <string name="oeh_info_jku_summary" translatable="false">An der Johannes Kepler Universität besteht die ÖH aus der Universitätsvertretung, den zugeordneten Referaten, wie beispielsweise dem ÖH Sozialreferat, den Fakultätsvertretungen und den Studienvertretungen. Unsere Aufgabenfelder sind Beratung, Information, Service und Vertretung. In diesem Sinne stehen wir dir bei Problemen im Studium mit Rat und Tat zur Seite, informieren dich über aktuelle Ereignisse an der Universität und vertreten die Studierenden in den Gremien der Universität.</string>
    <string name="oeh_info_contact_title" translatable="false">Kontakt</string>
    <string name="oeh_info_contact_summary" translatable="false">Wenn du Fragen und Anregungen hast, kannst du dich jederzeit unter <a href="mailto:oeh@oeh.jku.at">oeh@oeh.jku.at</a> an uns wenden!</string>
    <string name="oeh_rights_1_title" translatable="false">Deine Rechte und Pflichten</string>
</resources>